--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "grunt": "~0.4.2",
         "grunt-cli": "0.1.11",
         "grunt-contrib-less": "0.11.3",
-        "grunt-bower-install-simple": "0.9.2"
+        "grunt-bower-install-simple": "0.9.2",
+        "grunt-contrib-copy": "0.5.0"
     }
 }
